[package]
name = "todo_cli"
version = "1.0.0"
edition = "2021"
authors = ["Rasoul Hesami Rostami <h.rostami.r@gmail.com>"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15"


[lib]
name = "lib"
path = "src/lib.rs"
